# Machine-Learning-6-SIN-A-Mar-Jul-2026

./: .gitignore  Bias_Variance_Generalization.ipynb  COMMIT_MESSAGE.txt  Copia_de_Logistic_Regression.ipynb  Copy_of_linear_regression_taxi_(2).ipynb  Makefile  README.md  evaluacion_titanic.ipynb  loss.ipynb  pyproject.toml  recuperacion_ML.ipynb  setup.sh  trees.ipynb  workshop0.ipynb  workshop1.ipynb
.devcontainer/: Dockerfile  devcontainer.json
data/: california_housing.csv
notebooks/: exam.ipynb  main.ipynb
scripts/: build_notebook.py
src/: scale.py
