[project]
name = "ds-final-ml"
version = "1.0.0"
description = "Final Project ML 6 SIN-A — Linear & Logistic Regression on California Housing (UIDE)"
authors = [{ name = "Daniel Sozoranga", email = "daniel.sozoranga@uide.edu.ec" }]
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }

dependencies = [
    "pandas>=2.2,<4.0",
    "numpy>=1.26,<3.0",
    "scikit-learn>=1.5,<2.0",
    "matplotlib>=3.9,<4.0",
    "seaborn>=0.13,<1.0",
    "jupyter>=1.1,<2.0",
    "ipykernel>=6.29,<7.0",
    "nbformat>=5.10,<6.0",
]

[project.optional-dependencies]
# Bonus: implementación desde cero con JAX + ingesta con Polars.
# Cubre las herramientas que el profe mencionó en clase (JAX, Polars).
# El notebook detecta defensivamente si jax/polars están instalados y
# corre/omite el bonus en consecuencia. Por defecto SÍ se instalan
# (el Dockerfile incluye `[bonus]` para que el notebook corra completo).
bonus = [
    "jax[cpu]>=0.4.30,<0.6.0",
    "optax>=0.2.2,<0.3.0",
    "polars>=1.5.0,<2.0",
]

dev = [
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["notebooks"]
