[project]
name = "ds-final-ml"
version = "1.0.0"
description = "Linear & Logistic Regression on California Housing"
authors = [{ name = "Daniel Sozoranga" }]
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }

# Stack del pipeline principal. Rangos `>=X,<MAYOR+1` para permitir parches
# y minor releases sin romper la API; `uv.lock` pinea las versiones exactas.
dependencies = [
    "pandas>=2.2,<4.0",
    "numpy>=1.26,<3.0",
    "scikit-learn>=1.5,<2.0",
    "matplotlib>=3.9,<4.0",
    "seaborn>=0.13,<1.0",
    "jupyter>=1.1,<2.0",
    "ipykernel>=6.29,<7.0",
    "nbformat>=5.10,<6.0",
]

[project.optional-dependencies]
# Extras del bonus: reimplementación desde cero con autodiff (JAX + Optax)
# e ingesta lazy con Polars. El notebook detecta su presencia mediante
# try/except y omite las celdas correspondientes si no están instaladas.
bonus = [
    "jax[cpu]>=0.4.30,<0.6.0",
    "optax>=0.2.2,<0.3.0",
    "polars>=1.5.0,<2.0",
]

# Herramientas de calidad de código (no instaladas en el container).
dev = [
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["notebooks"]
